fix: align text on main page

--- a/src/styles/welcomepage.module.scss
+++ b/src/styles/welcomepage.module.scss
@@ -10,6 +10,12 @@
     margin: 0;
     padding: 3rem 0 1rem;
     box-sizing: border-box;
+
+    .typography {
+        text-align: center;
+        max-width: 28rem;
+        margin: 0 auto;
+    }
 }
 
 .welcomeWrapper {
